# PolygonDataset

./: .claudeignore  .gitignore  README.md  build_docs.py  pyproject.toml  pytest.ini  requirements.txt
src/polygon_dataset/: __init__.py
src/polygon_dataset/cli/: canonicalize_dataset.py  cli_utils.py  extract_dataset.py  generate_dataset.py  transform_dataset.py  visualize_dataset.py
src/polygon_dataset/config/: __init__.py  config_schema.py
src/polygon_dataset/configs/: config.yaml
src/polygon_dataset/configs/dataset/: default_dataset.yaml  high_res_dataset.yaml  large_dataset.yaml  small_dataset.yaml
src/polygon_dataset/configs/generators/: fpg_binary.yaml  fpg_native.yaml  multi.yaml  multi_rpg_native.yaml  rpg_2opt_ii.yaml  rpg_binary.yaml  rpg_growth.yaml  rpg_native.yaml  rpg_space.yaml  spg_binary.yaml  srpg_binary.yaml
src/polygon_dataset/configs/machine/: default.yaml  wsl.yaml
src/polygon_dataset/configs/transform/: douglas_peucker.yaml  visvalingam.yaml
src/polygon_dataset/core/: __init__.py  config_manager.py  dataset.py  dataset_paths.py  file_utilities.py  path_manager.py  pipeline.py
src/polygon_dataset/generators/: __init__.py  base.py  binary.py  native.py  registry.py
src/polygon_dataset/generators/binary/: __init__.py  base.py  fpg.py  rpg.py  spg.py  srpg.py
src/polygon_dataset/transformers/: __init__.py  base.py  canonicalize.py  douglas_peucker.py  polygon_transformer.py  registry.py  strategy.py  transform_io_handler.py  transform_processor.py  transformer.py  validate_canonicalization.py  visvalingam.py
src/polygon_dataset/transformers/strategies/: __init__.py  canonicalize.py  douglas_peucker.py  visvalingam.py
src/polygon_dataset/utils/: __init__.py  calculate_resolution_steps.py  chunking.py  extract_utils.py  filename_parser.py  read_line_file.py  registry.py
tests/: conftest.py  test_canonicalization.py  test_config_compose.py  test_fpg_native.py  test_generate_e2e.py  test_imports.py  test_legacy_paths.py  test_path_manager.py
