[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polygon-dataset"
version = "0.1.0"
description = "Framework for generating, transforming, and managing polygon dataset"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10.12",
    "Topic :: Scientific/Engineering :: Mathematics :: Machine Learning",
]
dependencies = [
    "numpy~=2.1.3",
    "tqdm~=4.67.1",
    "hydra-core>=1.2.0",
    "matplotlib>=3.10.0",
    "omegaconf>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "pylint>=2.15.0",
]
native = [
    "genpoly_rpg @ git+https://github.com/lukszi/python-rpg.git",
    "visvalingam_c @ git+https://github.com/lukszi/python-visvalingam.git",
]

[project.scripts]
generate-dataset = "polygon_dataset.cli.generate_dataset:main"
extract-dataset = "polygon_dataset.cli.extract_dataset:main"
transform-dataset = "polygon_dataset.cli.transform_dataset:main"
canonicalize-dataset = "polygon_dataset.cli.canonicalize_dataset:main"
visualize-dataset = "polygon_dataset.cli.visualize_dataset:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["polygon_dataset"]

[tool.setuptools.package-data]
polygon_dataset = ["py.typed", "configs/**/*.yaml"]